--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wagyu-swap/sdk",
   "license": "MIT",
   "version": "2.4.0",
-  "description": "🛠 An SDK for building applications on top of Pancakeswap.",
+  "description": "🛠 An SDK for building applications on top of Wagyu Swap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -10,7 +10,7 @@
   ],
   "repository": "https://github.com/altbee/wagyu-swap-sdk.git",
   "keywords": [
-    "pancakeswap",
+    "wagyu-swap",
     "bsc"
   ],
   "module": "dist/sdk.esm.js",
